apache0-test-app-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: apache0-test-app-service
  name: apache0-test-app-service
  namespace: dops-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache0-test-app-service
  template:
    metadata:
      labels:
        app: apache0-test-app-service
    spec:
      containers:
      - image: httpd:2.4
        name: apache
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs
          name: apache0-test-volume
      volumes:
        - name: apache0-test-volume
          configMap:
            name: apache0-test-index-html
---
apiVersion: v1
kind: Service
metadata:
  name: apache0-test-app-service
  namespace: dops-master
spec:
  selector:
    app: apache0-test-app-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
